--- a/src/routes/PermissionManager/Permission.less
+++ b/src/routes/PermissionManager/Permission.less
@@ -4,3 +4,10 @@
       margin-right: 8px;
     }
 }
+
+.iconSelect{
+	:global(.ant-select-dropdown-menu){
+		display: flex;
+		flex-wrap: wrap;
+	}
+}
